--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-plus": "^2.6.0",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "qrcode": "^1.5.4",
+    "undraw-ui": "1.2.6",
+    "viewerjs": "^1.11.7",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0",
+    "vue-scrollto": "^2.20.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +27,17 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.5",
+    "postcss-pxtorem": "^6.1.0",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.5",
+    "unplugin-vue-components": "^28.4.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   },
   "eslintConfig": {
     "root": true,
