--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "element-plus": "^2.6.0",
+    "howler": "^2.2.4",
+    "html2canvas": "^1.4.1",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "qrcode": "^1.5.4",
+    "swiper": "^11.2.4",
     "undraw-ui": "1.2.6",
     "viewerjs": "^1.11.7",
     "vue": "^3.2.13",
